还剩最后两节

--- a/第12课丨动态规划/动态规划.md
+++ b/第12课丨动态规划/动态规划.md
@@ -7,6 +7,8 @@
 ## dp数组定义
 数组的每一个元素表示一个“状态”，每一个维度表示一个独立的约束条件，
 通常有[问题规模]、[限制条件1]、[限制条件2]...[状态]
+Note: 局部最优解不一定直接是总体最优解。
+      所以要明确dp[i]的含义，即：子问题0...i的解。所以最终解可能是dp[n-1]，也可能是max_of(dp[])
 
 ## 状态转移
 每做一次选择，就会导致当前状态向下一状态或向自身的状态转移，
